workspace/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dapi-test-pod
spec:
  containers:
  - name: test-container
    image: k8s.gcr.io/busybox
    command: [ "/bin/sh", "-c", "env" ]
    resources:
      limits:
        cpu: 1
        memory: 200Mi
      requests:
        cpu: 100m
        memory: 200Mi
  restartPolicy: Never
