workspace/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: edu4.zcp-dtlabs.jp-tok.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
